Adding nsIDOMMouseMotionListener to fix Windowless plugins do not receive mouse/keyboard events bug 90574 r=av sr=waterson